# pdm-scriptcomplete

./: .gitignore  README.md  pyproject.toml
src/pdm_scriptcomplete/: __init__.py
